<resources>
    <string name="app_name">MatRev</string>
    <string name="prefs_theme_key">theme</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla quis cursus ligula. Nam volutpat massa id leo aliquet, et finibus dui consequat.
        Maecenas at lorem non ipsum ultricies convallis nec at augue. Maecenas dolor ipsum,
        sodales sit amet erat eget, blandit dapibus est. Etiam molestie, magna nec iaculis rutrum,
        leo felis egestas nulla, eget hendrerit sapien nunc a eros.
    </string>
    <string name="nextQuestion">Następne pytanie</string>
    <string name="finishTest">Zakończ test</string>
    <string name="q1">Co nazywamy Urzędem Dozoru Technicznego?</string>
    <string name="q2">Kiedy Urząd Dozoru Technicznego wykona badania doraźne eksploatacyjne przy urządzeniu?</string>
    <string name="q3">Czy wszystkie podesty ruchome wolnobieżne w KAT I P mogą pracować na wolnym powietrzu?</string>
    <string name="q4">Jaka jest funkcja zamka hydraulicznego, przed czym zabezpiecza i jak sprawdzić jego poprawne działanie w podestach?</string>
    <string name="q5">Jakie rodzaje urządzeń (podestów) będzie można obsługiwać posiadając uprawnienie KAT. I P?</string>
    <string name="q6">W  jaki sposób można  przeprowadzić próbę szczelności układu hydraulicznego w podestach ruchomych wolnobieżnych?</string>
    <string name="q7">Jaką funkcję spełnia zawór przelewowy w  układzie, oraz przed czym zawór przelewowy zabezpiecza?</string>
    <string name="q8">Czy uprawnienia są terminowe, gdzie są ważne i kiedy jest możliwość ich cofnięcia?</string>
    <string name="q9">Jakie warunki musi spełniać podest ruchomy wolnobieżny by można było eksploatować urządzenie?</string>
    <string name="q10">Jakie są podstawowe elementy zabezpieczające występujące w układach hydraulicznych podestów ruchomych wolnobieżnych?</string>
    <string name="q11">Jakie jest poprawne działanie poziomicy sferycznej, oraz jak sprawdzić poprawność działania poziomicy sferycznej</string>
    <string name="q12">W jaki sposób realizowana jest funkcja  awaryjnego opuszczania w podestach ruchomych wolnobieżnych – podać trzy systemy awaryjnego opuszczania:</string>
    <string name="q13">Kto decyduje o sprawności UTB (Urządzenia Transportu Bliskiego) podlegającego pod Urząd Dozoru Technicznego?</string>
    <string name="q14">Które czynności są w obowiązku do wykonywania przez operatora podestu przed rozpoczęciem pracy?</string>
    <string name="q15">W jaki sposób powinna być otwierana bramka wejściowa na podest ruchomy wolnobieżny?</string>
    <string name="q16">Jakie są funkcje podpór hydraulicznych oraz ich poprawne działanie?</string>
    <string name="q17">Jakie są rodzaje UTB (Urządzeń Transportu Bliskiego) które podlegają pod Urząd Dozoru Technicznego?</string>
    <string name="q18">Jak należy postępować podczas zaistnienia wypadku przy obsłudze podestu ruchomego wolnobieżnego?</string>
    <string name="q19">Na co powinien zwrócić szczególną uwagę operator podestu przy pracach wykonywanych na zewnętrz?</string>
    <string name="q20">Jakie parametry mają wpływ na udźwig urządzenia?</string>
    <string name="q21">Jakie są minimalne odległości od linii elektroenergetycznych, które musi zachować operator podestu ruchomego wolnobieżnego?</string>
    <string name="q22">Czy mając uprawnienia do obsługi podestów KAT. I P  można obsługiwać podesty wiszące?</string>
    <string name="q23">Jakie warunki musi spełniać operator podestu ruchomego wolnobieżnego by mógł obsługiwać podesty?</string>
    <string name="q24">Jaka jest funkcja płozy (łapa oporowa) w podeście, oraz gdzie się one znajdują?</string>
    <string name="q25">Czy obsługujący może i w jaki sposób sam przeprowadzić próbę statyczną na podeście ruchomym wolnobieżnym?</string>
    <string name="q26">Jakie elementy (parametry) wpływają  na stateczność podestu ruchomego wolnobieżnego?</string>
    <string name="q27">Proszę podać podstawowe elementy zabezpieczające typu elektrycznego, stosowane w podestach ruchomych wolnobieżnych:</string>
    <string name="q28">Jakie są podstawowe elementy zabezpieczające typu mechanicznego, stosowane w podestach ruchomych wolnobieżnych?</string>
    <string name="q1a1">Instytucja, która sprawdza stan bezpieczeństwa pożarowego.</string>
    <string name="q1a2">Instytucja, która kontroluje warunki pracy.</string>
    <string name="q1a3">Sprawdza urządzenia niepodlegające pod UDT.</string>
    <string name="q1a4">Instytucja, która ma zapewnić bezpieczne funkcjonowanie.</string>
    <string name="q2a1">Po wypadku z urządzeniem poddozorowym.</string>
    <string name="q2a2">Po awarii urządzenia.</string>
    <string name="q2a3">Po naprawie, modernizacji, wymianie elementu lub zmianie lokalizacji.</string>
    <string name="q2a4">Przy nowym urządzeniu.</string>
    <string name="q3a1">Tak, te które mogą pracować przy sile wiatru do 12.5 m/s.</string>
    <string name="q3a2">Tak, wszystkie.</string>
    <string name="q3a3">Tylko podesty na pełnych kołach.</string>
    <string name="q3a4">Tylko podesty spalinowe.</string>
    <string name="q4a1">Zabezpiecza przed niepożądanymi ruchami.</string>
    <string name="q4a2">Zabezpiecza przed wyższym podniesieniem, niż dozwolone.</string>
    <string name="q4a3">Zabezpiecza przed wzrostem ciśnienia w układzie hydraulicznym.</string>
    <string name="q4a4">Zabezpiecza przed pękniętym przewodem i opadnięciem kosza. Poprawne działanie sprawdza się przy obciążeniu 100%.</string>
    <string name="q5a1">Podesty ruchome wolnobieżne.</string>
    <string name="q5a2">Podesty masztowe.</string>
    <string name="q5a3">Podesty samojezdne.</string>
    <string name="q56a4">Podesty stacjonarne.</string>
    <string name="q6a1">Przy 125% obciążeniu z koszem na wysokości 1m, sprawdzamy czy nie opada.</string>
    <string name="q6a2">Przy 90% obciążeniu z koszem na wysokości 1m, sprawdzamy czy nie opada. </string>
    <string name="q6a3">Przy 100% obciążeniu z koszem na wysokości 1m, sprawdzamy czy nie opada. </string>
    <string name="q6a4">Przy 110% obciążeniu z koszem na wysokości 1m, sprawdzamy czy nie opada. </string>
    <string name="q7a1">Zabezpiecza przed cofnięciem oleju.</string>
    <string name="q7a2">Zabezpiecza przed utratą stateczności.</string>
    <string name="q7a3">Zabezpiecza przed siłami dynamicznymi.</string>
    <string name="q7a4">Zabezpiecza przed wzrostem ciśnienia i uszkodzeniem przewodów hydraulicznych.</string>
    <string name="study1">Ustawa z  dnia 21 grudnia  2000 r.  o Dozorze Technicznym ( Dz. U. nr 122,poz 1321 ze zm. )</string>
    <string name="study2">Art. 1</string>
    <string name="study3">Ustawa określa zasady, zakres i formy wykonywania dozoru technicznego oraz jednostki właściwe  do jego wykonywania. </string>
    <string name="study4">Art. 2 ust. 1</string>
    <string name="study5">Dozorem Technicznym są określone ustawą działania zmierzające do zapewnienia bezpiecznego funkcjonowania urządzeń technicznych. </string>
    <string name="study6">Art. 4</string>
    <string name="study7">Ilekroć w ustawie jest mowa o :</string>
    <string name="study8">Urządzeniach technicznych – należy przez to rozumieć urządzenia ,które mogą stwarzać zagrożenia dla życia lub zdrowia ludzkiego oraz mienia i środowiska.</string>
    <string name="study9">-rozprężanie cieczy i gazów </string>
    <string name="study10">-wyzwalanie energii potencjalnej lub kinetycznej przy przemieszczaniu ludzi lub ładunków w ograniczonym zasięgu,</string>
    <string name="study11">-rozprzestrzeniania się materiałów  niebezpiecznych podczas ich magazynowania lub transportu.</string>
    <string name="study15">Art. 14 ust.1</string>
    <string name="studyTopic1Text5">Urządzenia techniczne objęte dozorem technicznym, z wyjątkiem urządzeń, o których mowa w art. 15 ust 1 ,mogą być eksploatowane tylko na podstawie decyzji zezwalającej na ich eksploatację ,wydanej przez organ właściwej jednostki dozoru technicznego.</string>
    <string name="study16">Art. 22 ust.2</string>
    <string name="study17">Osoby wykonujące czynności spawania , zgrzewania, lutowania oraz przeróbka plastyczną i obróbki cieplną w toku wytwarzania , napraw i modernizacji urządzeń technicznych oraz wytwarzania elementów stosowanych do wytwarzania , naprawy lub modernizacji tych urządzeń obowiązane są posiadać zaświadczenia kwalifikacyjne potwierdzające umiejętności praktycznego wykonywania tych czynności oraz znajomości warunków technicznych dozoru technicznego, norm i przepisów prawnych w tym zakresie.</string>
    <string name="studytopic1Text6">Naprawę , wymianę oraz przeglądy okresowe może dokonać osoba posiadająca uprawnienia wydane przez Urząd Dozoru Technicznego do wykonywania konserwacji podestów ruchomych przejezdnych wolnobieżnych, przewoźnych.</string>
    <string name="study18">Osoba posiadająca uprawnienia do obsługi podestów ruchomych przejezdnych wolnobieżnych i przewoźnych dokonuje tylko obsługi codziennej przed rozpoczęciem pracy i po jej zakończeniu</string>
    <string name="parametry5">Budowa podestu ruchomego:</string>
    <string name="parametry6">-	Wózek jezdny wraz z mechanizmami ruchu</string>
    <string name="parametry7">-	Platforma robocza</string>
    <string name="parametry8">- Wieża obrotowa wraz z mechanizmem obrotu</string>
    <string name="parametry9">-	Podpory hydrauliczne</string>
    <string name="parametry10">-	Układy elektryczne</string>
    <string name="parametry11">- Układy hydrauliczne</string>
    <string name="parametry12">- Zabezpieczenia – elektryczne, mechaniczne, hydrauliczne</string>
    <string name="parametry13">Budowa układu hydraulicznego:</string>
    <string name="parametry14">Układ hydrauliczny składa się z pompy napędzanej przez silnik, rozdzielaczy, zawory zwrotne jednokierunkowe,  zaworów zwrotnych sterowanych, zaworów przelewowych, siłowników wysięgnika dolnego i górnego oraz podpór, przewodów sztywnych i elastycznych, filtrów, wyłączników krańcowych., złącza obrotowego, ciśnieniomierza, zbiornika oleju hydraulicznego itp.</string>
    <string name="parametry18">Układ hydrauliczny powinien być wyposażony w następujące zawory:</string>
    <string name="parametry19">- zawory zwrotne jednokierunkowe</string>
    <string name="parametry20">zabezpieczające przed skutkami pęknięcia przewodów ciśnieniowych</string>
    <string name="parametry21">- zawory zwrotne sterowane</string>
    <string name="parametry22">zawory przeznaczone do utrzymania nurników w cylindrach w danym położeniu  oraz zabezpieczające przez skutkami pęknięcia przewodów ciśnieniowych</string>
    <string name="parametry23">- zawory przelewowe</string>
    <string name="parametry24">utrzymujące w układzie ciśnienie o określone wartości.</string>
    <string name="parametry25">Wszystkie zawory powinny być odpowiednio wyregulowane i zaplombowane. Regulacje zaworów może wykonać konserwator, jeżeli posiada, odpowiednie przyrządy do sprawdzenia ich nastawień . Po regulacji należy założyć plomby.</string>
    <string name="zagrozenia1">Podczas pracy na podestach ruchomych występują, następujące zagrożenia:</string>
    <string name="zagrozenia2">- Wiatr</string>
    <string name="zagrozenia3">- Deszcz</string>
    <string name="zagrozenia4">- Wyładowania atmosferyczne</string>
    <string name="zagrozenia5">- Niestabilność terenu</string>
    <string name="zagrozenia6">- Praca w pobliżu przewodów pod napięciem</string>
    <string name="zagrozenia7">- Praca w pobliżu przebywających ludzi lub pracujących urządzeń</string>
    <string name="zagrozenia8">- Źle zabezpieczone materiały na podeście</string>
    <string name="zagrozenia9">- Przeładowanie podestu</string>
    <string name="zagrozenia10">- Transport materiałów niebezpiecznych</string>
    <string name="zagrozenia11">- Transport materiałów kulistych.</string>
</resources>